build: add token

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "tokengohere",
+    "token": "OTgyMjQ1MDcyNjYzODc5NzYx.GMm8Wv.J88mHsknLdfhkpMqDbmj3mulVkoylkortDe-k8",
     "prefix": "!",
-    "userID": "useridhere",
+    "userID": "Jordi#5669",
     "disableEveryone": true
 }
