build: fix build files

--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,5 @@
     "token": "OTgyMjQ1MDcyNjYzODc5NzYx.GMm8Wv.J88mHsknLdfhkpMqDbmj3mulVkoylkortDe-k8",
     "prefix": "!",
     "userID": "Jordi#5669",
-    "disableEveryone": true
+    "disableEveryone": false
 }
