--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTgyMjQ1MDcyNjYzODc5NzYx.GJwnvm.mbHuq_63C6unR-hxPJkNwShzzo6O4BoTC8m5GU",
+    "token": "",
     "prefix": "!",
     "userID": "Jordi#5669",
     "disableEveryone": false
